--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Page title</title>
-    <link rel="stylesheet" type="text/css" href="/storage/emulated/0/Documents/style.css"/>
+    <link rel="stylesheet" type="text/css" href="https://altmanndevelopment.github.io/test/style.css"/>
 </head>
 <body>
     <div id="boxes"></div>
