--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page title</title>
+    <title>New page title</title>
     <link rel="stylesheet" type="text/css" href="https://altmanndevelopment.github.io/test/style.css"/>
 </head>
 <body>
